--- a/Practica1/app/src/main/AndroidManifest.xml
+++ b/Practica1/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         tools:targetApi="31">
         <activity
             android:name=".AfegirCotxe"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
         </activity>
         <activity
