--- a/Practica1/app/src/main/AndroidManifest.xml
+++ b/Practica1/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".infoCotxe"
+            android:exported="false" />
+        <activity
             android:name=".AfegirCotxe"
-            android:parentActivityName=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
